--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
     "typescript": "^4.9.5",
