--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "any"
     },
     {
-      "src": "logo_light.png",
+      "src": "logo_light.svg",
       "type": "image/svg+xml",
       "sizes": "any"
     }
